Hadoop Change Log

HADOOP-12682. Fix TestKMS#testKMSRestart* failure. Contributed by Wei-Chiu Chuang.

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

    HADOOP-12284. UserGroupInformation doAs can throw misleading exception
    (Aaron Dosset via stevel)

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-12045. Enable LocalFileSystem#setTimes to change atime.
    (Kazuho Fujii via cnauroth)

    HADOOP-11031. Design Document for Credential Provider API.
    (Larry McCay via cnauroth)

    HADOOP-12548. Read s3a creds from a Credential Provider.
    (Larry McCay via cnauroth)

    HADOOP-12059. S3Credentials should support use of CredentialProvider.
    (Sean Busbey via wang)

    HADOOP-12555. WASB to read credentials from a credential provider.
    (Larry McCay via cnauroth)

    HADOOP-12292. Make use of DeleteObjects optional.
    (Thomas Demoor via stevel)

    HADOOP-11859. PseudoAuthenticationHandler fails with httpcomponents v4.4.
    (Eugene Koifman via jitendra)

    HADOOP-13362. DefaultMetricsSystem leaks the source name when a source
    unregisters (Junping Du via jlowe)

    HADOOP-12042. Users may see TrashPolicy if hdfs dfs -rm is run
    (Andreina J via vinayakumarb)

    HADOOP-12404. Disable caching for JarURLConnection to avoid sharing
    JarFile with other users when loading resource from URL in Configuration
    class. (zxu)

    HADOOP-11827. Speed-up distcp buildListing() using threadpool
    (Zoran Dimitrijevic via raviprak)

    HADOOP-10798. globStatus() should always return a sorted list of files
    (cmccabe)

    HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
    FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)

    HADOOP-11934. Use of JavaKeyStoreProvider in LdapGroupsMapping causes